[package]
name = "tcpplayermirror"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# rrplug = { git = "https://github.com/catornot/rrplug.git" }
rrplug = { path = "../rrplug" }
bincode = "1.3.3"
serde = { version = "1.0.152", features = ["derive"] }

[build-dependencies]
windres = "0.2.2"

[lib]
crate-type = ["cdylib"]

# [[bin]]
# name = "test"
# path = "src/test.rs"